--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="./app.js" defer></script>
 </head>
 <body>
-    
+    <button id="rock-button">Rock</button>
+    <button id="scissors-button">Scissors</button>
+    <button id="paper-button">Paper</button>
+    <div class="results"></div>
 </body>
 </html>
